--- a/QJY.WEB/ViewV5/AppPage/JYGL/JYGL.html
+++ b/QJY.WEB/ViewV5/AppPage/JYGL/JYGL.html
@@ -40,12 +40,12 @@
                         </table>
                     </div>
                 </li>
-                <li class="add-item add-widthall">
-                    <label class="add-item-label">使用说明</label>
+                <!--<li class="add-item add-widthall">
+                    <label class="add-item-label">备注</label>
                     <div class="add-ic">
                         <textarea type="text" autofocus="autofocus" ms-duplex="modelData.Remark" rows="4" class="span2   form-control"></textarea>
                     </div>
-                </li>
+                </li>-->
             </ul>
         </div>
 
