--- a/QJY.WEB/ViewV5/AppPage/XTGL/QYHPZ_DJ.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/QYHPZ_DJ.html
@@ -148,7 +148,7 @@
                 <ul class="csh-yy oh">
                     <li ms-repeat-yy="yylist">
                         <div class="list-initialization">
-                            <img ms-src="'/ViewV5/images/icon/'+yy.ModelCode+'.png'">
+                            <img ms-src="'/ViewV5/images/icon/'+yy.ModelCode+'.png'"  onerror="javascript: this.src = '/ViewV5/images/icon/Common.png'">
                             <div class="initialization-cont">
                                 <span class="bt">{{yy.ModelName}}</span>
                             </div>
