--- a/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
+++ b/QJY.WEB/View_Mobile/UI/BASE/APP_MOBIL_WF.html
@@ -278,11 +278,11 @@
                                 <div class="state success">
                                     {{item.TaskUserView}}
                                 </div>
-                                <div class="sp-box" ms-if="lctype=='0'">
+                                <div class="sp-box">
                                     <div>{{item.userrealname}}</div>
                                     <div class="sp-time">{{item.EndTime}}</div>
                                 </div>
-                                <div class="sp-box" ms-if="lctype=='1'">
+                                <div class="sp-box" ms-if="lctype!='1'">
                                     <div>{{item.TaskName}}</div>
                                     <div class="sp-time">{{item.EndTime}}</div>
                                 </div>
@@ -410,7 +410,7 @@
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
     <script src="//res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script src="/View_Mobile/JS/avalon1.47.js"></script>
-    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20180510"></script>
+    <script src="/View_Mobile/JS/ComFunJS.js?jsver=20180520"></script>
     <script src="/View_Mobile/JS/raty/jquery.raty.js?v=1.3"></script>
     <script src="/ViewV5/JS/WFJS.js?ver=20181225"></script>
     <script>
