--- a/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
+++ b/QJY.WEB/View_Mobile/UI/UI_QYTXL_LIST.html
@@ -203,6 +203,7 @@
         </div>
         <div class="page" id="pageindex2" ms-include-src="/View_Mobile/UI/UI_QYTXL_INFO.html?r={{rdm}}" data-include-rendered='Temprender'></div>
     </div>
+    <script src="/View_Mobile/JS/layer/layer.m.js"></script>
     <script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm.min.js' charset='utf-8'></script>
     <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.5.8/js/sm-extend.min.js' charset='utf-8'></script>
