修复下载压缩文件的问题,修复部分页面分页失效的问题

--- a/QJY.WEB/ViewV5/AppPage/JFBX/JFBXLIST.html
+++ b/QJY.WEB/ViewV5/AppPage/JFBX/JFBXLIST.html
@@ -124,7 +124,11 @@
         curXJTime: "",
         starTime: "",
         endTime: "",
-        tmpListData:[],
+        tmpListData: [],
+        selNum: function (item) {    //选择显示的条数
+            model.page.pagecount = item;
+            tempindex.GetLIST();
+        },
         SelectType: function (type) {
             model.search.seartype = type;
             tempindex.GetLIST();
