继续完善细节

--- a/QJY.WEB/ViewV5/AppPage/XTGL/XTGL_INIT.html
+++ b/QJY.WEB/ViewV5/AppPage/XTGL/XTGL_INIT.html
@@ -134,6 +134,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="companyName" class=" col-xs-2 control-label text-right">QYCode</label>
+                        <div class="col-xs-6">
+                            <input type="text" class="form-control" id="companyName" ms-duplex="CompanyData.QYCode"  placeholder="请输入QYCode" />
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="WebSite" class="col-xs-2 control-label text-right">企业Logo</label>
                         <div class="col-xs-6 text-left">
                             <input type="text" class="szhl_Upload" ms-duplex="CompanyData.LogoID"  />
